added a function to image_writer.hpp to save the image directly as png. copied the base vec3.hpp file from ray tracer in one weekend. modified CMakeLists.txt to accomodate these changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Ofast")
 
 add_executable(tracy
   main.cpp
-  # add more files here
+  src/image_writer.cpp
 )
 
 target_include_directories(tracy PRIVATE include/)
