well well well, the camera works!!! not that we are rendering any meaningful image now (it's just a red block). but at least it works!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Ofast")
 add_executable(tracy
   main.cpp
   src/image_writer.cpp
+  src/camera.cpp
+  src/ray.cpp
 )
 
 target_include_directories(tracy PRIVATE include/)
